fixed some CSS Spacings

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,17 @@
 
 .app-wrapper{
-  padding: 10px 20px;
-
+  padding: 30px 20px;
 }
 
 .header-wrapper{
   display: flex;
+  align-items: center;
   justify-content: space-between;
+  margin-bottom: 15px;
+}
+
+@media (max-width: 500px){
+  .app-wrapper{
+    padding: 30px 12px;
+  }
 }
