--- a/src/stylesheets/saveBtn.css
+++ b/src/stylesheets/saveBtn.css
@@ -1,8 +1,9 @@
 .save-button-div{
-  margin-left: auto;
+  margin-left: 20px;
 }
 
 .save-button{
+  margin: auto !important;
   background-color: white;
   border: none;
   outline: none;
@@ -17,9 +18,11 @@
   border-radius: 10px;
   color: black;
   transition: all 0.4s ease;
+  cursor: pointer;
+  -webkit-tap-highlight-color: transparent;
 }
 
 .save-button:active{
   box-shadow: 0 0 2px black;
-  /* border: 2px solid black; */
+  background-color: white;
 }
