--- a/src/stylesheets/title.css
+++ b/src/stylesheets/title.css
@@ -1,5 +1,5 @@
 .title-div{
   font-weight: 500; 
   font-size: 18px; 
-  margin-left: auto;
+  margin: auto;
 }
